# scaffold-gs-nerfstudio

./: README.md  pyproject.toml
scaffold_gs/: gsdf_datamanager.py  gsdf_depth_sampler.py  gsdf_model.py  gsdf_scheduler.py  neus_acc_model.py  neus_acc_sampler.py  neus_acc_scheduler.py  scaffold_gs_config.py  scaffold_gs_model.py  scaffold_gs_renderer.py
scaffold_gs/gaussian_splatting/: cameras.py
